[package]
name = "polkadot-overseer"
version = "0.9.12"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
client = { package = "sc-client-api", git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
sp-api = { git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
futures = "0.3.17"
futures-timer = "3.0.2"
parking_lot = "0.11.1"
polkadot-node-network-protocol = { path = "../network/protocol" }
polkadot-node-primitives = { path = "../primitives" }
polkadot-node-subsystem-types = { path = "../subsystem-types" }
polkadot-node-metrics = { path = "../metrics" }
polkadot-primitives = { path = "../../primitives" }
polkadot-overseer-gen = { path = "./overseer-gen" }
tracing = "0.1.29"
lru = "0.7"
parity-util-mem = { version = ">= 0.10.1", default-features = false }

[dev-dependencies]
metered-channel = { path = "../metered-channel" }
sp-core = { git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
futures = { version = "0.3.17", features = ["thread-pool"] }
femme = "2.1.1"
assert_matches = "1.4.0"

[features]
default = []
