[package]
name = "polkadot-service"
version = "0.9.12"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Substrate Client
sc-authority-discovery = { git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
babe = { package = "sc-consensus-babe", git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
beefy-primitives = { git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
beefy-gadget = { git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
sc-client-api = { git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
sc-client-db = { git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
sc-consensus-uncles = { git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
sc-consensus = { git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
sc-executor = { git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
sc-network = { git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
sc-keystore = { git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
sc-offchain = { git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
service = { package = "sc-service", git = "https://github.com/paritytech/substrate", default-features = false , rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
telemetry = { package = "sc-telemetry", git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }

# Substrate Primitives
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
sp-api = { git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
sp-core = { git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
sp-io = { git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
sp-keystore = { git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
sp-runtime = { git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
sp-session = { git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
sp-storage = { git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
sp-trie = { git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }

# Substrate Pallets
pallet-babe = { git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
pallet-im-online = { git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
pallet-staking = { git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
pallet-mmr-primitives = { git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }

# Substrate Other
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }

# External Crates
futures = "0.3.17"
hex-literal = "0.3.3"
tracing = "0.1.29"
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.30"
kvdb = "0.10.0"
kvdb-rocksdb = { version = "0.14.0", optional = true }
async-trait = "0.1.51"
lru = "0.7"

# Polkadot
# polkadot-node-core-parachains-inherent = { path = "../core/parachains-inherent" }
polkadot-overseer = { path = "../overseer" }
polkadot-client = { path = "../client", default-features = false, optional = true }
polkadot-parachain = { path = "../../parachain" }
polkadot-primitives = { path = "../../primitives" }
polkadot-node-primitives = { path = "../primitives" }
polkadot-rpc = { path = "../../rpc" }
polkadot-subsystem = { package = "polkadot-node-subsystem", path = "../subsystem" }
polkadot-node-subsystem-util = { path = "../subsystem-util" }
polkadot-runtime-parachains = { path = "../../runtime/parachains" }
polkadot-node-network-protocol = { path = "../network/protocol" }

# Polkadot Runtimes
polkadot-runtime = { path = "../../runtime/polkadot", optional = true }
kusama-runtime = { path = "../../runtime/kusama", optional = true }
westend-runtime = { path = "../../runtime/westend", optional = true }
rococo-runtime = { path = "../../runtime/rococo", optional = true }

# Polkadot Subsystems
# polkadot-approval-distribution = { path = "../network/approval-distribution", optional = true }
# polkadot-availability-bitfield-distribution = { path = "../network/bitfield-distribution", optional = true }
# polkadot-availability-distribution = { path = "../network/availability-distribution", optional = true }
# polkadot-availability-recovery = { path = "../network/availability-recovery", optional = true }

polkadot-collator-protocol = { path = "../network/collator-protocol", optional = true }

# polkadot-dispute-distribution = { path = "../network/dispute-distribution", optional = true }
# polkadot-gossip-support = { path = "../network/gossip-support", optional = true }
polkadot-network-bridge = { path = "../network/bridge", optional = true }

polkadot-node-collation-generation = { path = "../collation-generation", optional = true }

# polkadot-node-core-approval-voting = { path = "../core/approval-voting", optional = true }
# polkadot-node-core-av-store = { path = "../core/av-store", optional = true }
# polkadot-node-core-backing = { path = "../core/backing", optional = true }
# polkadot-node-core-bitfield-signing = { path = "../core/bitfield-signing", optional = true }
# polkadot-node-core-candidate-validation = { path = "../core/candidate-validation", optional = true }

polkadot-node-core-chain-api = { path = "../core/chain-api", optional = true }

# polkadot-node-core-chain-selection = { path = "../core/chain-selection", optional = true }
polkadot-node-core-dispute-coordinator = { path = "../core/dispute-coordinator", optional = true }
# polkadot-node-core-dispute-participation = { path = "../core/dispute-participation", optional = true }
# polkadot-node-core-provisioner = { path = "../core/provisioner", optional = true }

polkadot-node-core-runtime-api = { path = "../core/runtime-api", optional = true }

# polkadot-statement-distribution = { path = "../network/statement-distribution", optional = true }

[dev-dependencies]
polkadot-test-client = { path = "../test/client" }
polkadot-node-subsystem-test-helpers = { path = "../subsystem-test-helpers" }
env_logger = "0.9.0"
log = "0.4.14"
assert_matches = "1.5.0"

[features]
default = ["db", "full-node", "polkadot-native"]

db = [
	"service/db"
]

full-node = [
	# "polkadot-node-core-av-store",
	# "polkadot-node-core-approval-voting",
	# "polkadot-availability-bitfield-distribution",
	# "polkadot-availability-distribution",
	# "polkadot-availability-recovery",
	"polkadot-client",
	"polkadot-collator-protocol",
	# "polkadot-dispute-distribution",
	# "polkadot-gossip-support",
	"polkadot-network-bridge",
	"polkadot-node-collation-generation",
	# "polkadot-node-core-backing",
	# "polkadot-node-core-bitfield-signing",
	# "polkadot-node-core-candidate-validation",
    "polkadot-node-core-chain-api",
	# "polkadot-node-core-chain-selection",
	# "polkadot-node-core-dispute-coordinator",
	# "polkadot-node-core-dispute-participation",
	# "polkadot-node-core-provisioner",
    "polkadot-node-core-runtime-api",
	# "polkadot-statement-distribution",
	# "polkadot-approval-distribution",
	"kvdb-rocksdb"
]

# Configure the native runtimes to use. Polkadot is enabled by default.
#
# Validators require the native runtime currently
polkadot-native = [ "polkadot-runtime", "polkadot-client/polkadot" ]
kusama-native = [ "kusama-runtime", "polkadot-client/kusama" ]
westend-native = [ "westend-runtime", "polkadot-client/westend" ]
rococo-native = [ "rococo-runtime", "polkadot-client/rococo" ]

runtime-benchmarks = [
	"polkadot-runtime/runtime-benchmarks",
	"kusama-runtime/runtime-benchmarks",
	"westend-runtime/runtime-benchmarks",
	"rococo-runtime/runtime-benchmarks"
]
try-runtime = [
	"polkadot-runtime/try-runtime",
	"kusama-runtime/try-runtime",
	"westend-runtime/try-runtime",
	"rococo-runtime/try-runtime",
]
malus = ["full-node"]
disputes = ["polkadot-node-core-dispute-coordinator/disputes"]
